# PHSX315

./: LowPrecisionPeriodData.csv  Manifest.toml  Plots.html  Project.toml  README.md  experiment1.csv  experiment2.csv  onerandom.txt  plot.html  test.html
.gitignore/: key.txt
ClassExamples/Quadrature/: quadArgs.py
Problem 1/: Chisqfit.py
Problem 2/: fit.jl  fit.py
assignment3-Mamba-Grant/: README.md
assignment4-Mamba-Grant/julia_testing_simple_hypotheses/: Project.toml
assignment5-Mamba-Grant/: README.md
assignment5-Mamba-Grant/Problem 1/: Chisqfit.py  batchrun.sh  nohup.out
assignment5-Mamba-Grant/Problem 2/: Physical Model Fitting.jl  fit.py
assignment5-Mamba-Grant/Problem 3/: Likelihood Estimation.jl  p3.html
assignment5-Mamba-Grant/Problem 4/: Quadradic-Legendre fit.jl
assignment5-Mamba-Grant/rsc/: HighPrecisionPeriodData.ods  LowPrecisionPeriodData.ods.ods  Table1.csv  Table1.ods
assignment6-Mamba-Grant/: README.md
assignment6-Mamba-Grant/Problem 1/: p1.jl  p1_profiling.jl
assignment6-Mamba-Grant/Problem 2/: p2.jl
assignment6-Mamba-Grant/Problem 3/: p3.jl  p3_plot.jl
assignment6-Mamba-Grant/Problem 4/: p4.jl
assignment6-Mamba-Grant/Problem 5/: Boole.jl  Simpson.jl
assignment6-Mamba-Grant/Problem 6/: Euler.jl  RK2.jl  RK2_Optimization.jl  RK2_Zero.jl
hitmiss_montecarlo_pi/: hit_and_miss_calculating_pi.ipynb  hit_and_miss_calculating_pi.py
julia/: Manifest.toml
julia/src/: julia_testing_simple_hypotheses.jl  (+1 more)
resources/: plot.html
rust_hitmiss_montecarlo_pi/: Cargo.toml
rust_hitmiss_montecarlo_pi/src/: main.rs
(+2 files in other folders)
