[package]
name = "rust_hitmiss_montecarlo_pi"
version = "0.1.0"
edition = "2021"    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4.0"
rand_pcg = "0.3.1"
argparse = "0.2.2"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
